# my-pdm-project

./: .flake8  README.md  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst  mymath.rst
src/my_pdm_project_cwprogram_test/: mymath.py
tests/: test_mymath.py
